--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,72 @@ body{
     background-color: rgba(246,248,249,255);
 }
 
+.container{
+    background-color: white;
+    width: 100%;
+    margin: 0 auto;
+}
+
 .title{
     display: inline;
     font-size: 38px;
-    vertical-align:top;
+    vertical-align: top;
     font-family:Arial, Helvetica, sans-serif;
+}
+
+.nav{
+    border-bottom: 2px solid rgba(246,248,249,255);;
+}
+
+.corpo{
+    margin: auto;
+    padding: 100px;
+    align-items: center;
+}
+
+.nav, .centro{
+    padding: 20px;
+    background-color: white;
+    border-radius: 5%;
+}
+
+.lista{
+    display: inline-block;
+}
+
+ul {
+    list-style: none; /* Remove list bullets */
+  }
+
+  .categoria{
+      display: inline;
+      margin: 20px;
+      padding: 5px;
+      border-radius: 20%;
+      color: white;
+      font-size: small;
+  }
+
+  #editorial{
+    background-color: rgba(69,171,234,255);
+  }
+
+  #goals{
+    background-color: rgba(156,114,228,255);
+}
+
+#recruiting{
+    background-color: rgba(100,192,169,255);
+}
+
+#mobile{
+    background-color: rgba(242,158,51,255);
+}
+
+#website{
+    background-color: rgba(216,99,161,255);
+}
+
+#sales{
+    background-color: rgba(176,201,38,255);
 }
